2016-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Trace ExtendCache() failures.

2016-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Fix unexpectedly large memory
	allocation with corrupt SGI file provided via email by Agostino
	Sarubbo on September 15, 2016.

	* coders/rle.c (ReadRLEImage): Only report an invalid colormap
	index once.  Fixes slowness problem with corrupt file provided via
	email by Agostino Sarubbo on September 15, 2016.

2016-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/thanks.rst: Added a 'thanks' page.

2016-09-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/MANIFEST: Fix content of PerlMagick MANIFEST.

2016-09-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Check that filesize is reasonable
	given header.  Fixes excessive memory allocation followed by
	eventual file truncation error for corrupt file.  Problem was
	reported via email by Agostino Sarubbo on 2016-09-10.

	* coders/sgi.c (ReadSGIImage): Check that filesize is reasonable
	given header.  Fixes excessive memory allocation followed by
	eventual file truncation error for corrupt file.  Problem was
	reported via email by Agostino Sarubbo on 2016-09-09.

	* coders/sct.c (ReadSCTImage): Fix stack-buffer read overflow
	while reading SCT header.  Problem was reported via email by
	Agostino Sarubbo on 2016-09-09.

	* coders/svg.c: Fix Coverity issue 135772 "RESOURCE_LEAK" and
	issue 135829 "Null pointer dereferences".  None of these issues
	were new, but Coverity noticed them now.  Reflowed source to GNU C
	style for consistent indentation and so it does not fight with my
	editor.

2016-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h (MAGICK_HAS_ATTRIBUTE): Coverity is allergic to
	__has_attribute() so don't use it for Coverity builds.

2016-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
