@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2016-09-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>www/thanks.rst: Added Moshe Kaplan to Thanks.</li>
+<li>www/Hg.rst: Mercurial URL fixes.  Patch from Mark Mitchell.</li>
+<li>www/programming.rst: Updated programming APIs page.</li>
+</ul>
+</blockquote>
 <p>2016-09-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
