@@ -56,16 +56,16 @@
 <li><a class="reference internal" href="#mercurial-topics" id="id11">Mercurial Topics</a></li>
 </ul>
 </div>
-<p>The GraphicsMagick source code is now available via <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a>.
+<p>The GraphicsMagick source code is now available via <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a>.
 Previously GraphicsMagick source control was via CVS, but now the
-repository has been migrated to <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a>.  <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a> is a
+repository has been migrated to <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a>.  <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a> is a
 convenient way for developers from around the country or world to
 download the GraphicsMagick source, fix bugs, or add new features.
-Due to the way <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a> works, it may also be used to manage local
+Due to the way <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a> works, it may also be used to manage local
 changes to GraphicsMagick.</p>
 <div class="section" id="what-is-mercurial">
 <h1><a class="toc-backref" href="#id1">What is Mercurial?</a></h1>
-<p><a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a> (also known as <cite>Hg</cite> due to the abbreviation for Mercury in
+<p><a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a> (also known as <cite>Hg</cite> due to the abbreviation for Mercury in
 the periodic table of the elements) is a modern source control system
 which provides anyone who clones a repository with a stand-alone local
 repository containing the full development history and the ability to
@@ -134,7 +134,7 @@ automatically does a merge.</p>
 <div class="section" id="mercurial-software">
 <h1><a class="toc-backref" href="#id6">Mercurial Software</a></h1>
 <p>The best place to look for the latest version of Mercurial (<cite>Hg</cite>) is
-at the <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a> web site.  Most free operating systems (e.g. Linux,
+at the <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a> web site.  Most free operating systems (e.g. Linux,
 OpenSolaris, and *BSD) will offer a version of Mercurial as an
 installable package and it may already be installed on your system.
 We recommend use of <a class="reference external" href="http://tortoisehg.bitbucket.org/">TortoiseHg</a> on Microsoft Windows systems since it
@@ -143,7 +143,7 @@ available on Linux and other systems.</p>
 </div>
 <div class="section" id="mercurial-for-graphicsmagick-developers">
 <h1><a class="toc-backref" href="#id7">Mercurial for GraphicsMagick Developers</a></h1>
-<p>Since <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a> is a distributed revision control system, you may
+<p>Since <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a> is a distributed revision control system, you may
 clone the GraphicsMagick repository and work for days or weeks (making
 your own local commits) before you decide to push some or all of your
 changes to the GraphicsMagick development repository.  GraphicsMagick
@@ -161,7 +161,7 @@ as often as source code snapshots are produced.</p>
 The developer makes any local changes and commits what he likes in his
 own repository.  It is best to commit often and whenever all the
 files have been updated to implement a coherent change or feature
-(including the ChangeLog file!) since <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a> stores related
+(including the ChangeLog file!) since <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a> stores related
 changes as a changeset along with the change message you enter.
 When you push your repository, these changesets and messages are
 preserved.</blockquote>
@@ -277,8 +277,8 @@ hg update
 <div class="section" id="mercurial-topics">
 <h1><a class="toc-backref" href="#id11">Mercurial Topics</a></h1>
 <ul class="simple">
-<li><a class="reference external" href="http://mercurial.selenic.com/wiki/MergeToolConfiguration">Merge Tool Configuration</a></li>
-<li><a class="reference external" href="http://mercurial.selenic.com/wiki/TipsAndTricks#mergemineortheir">Keep &quot;My&quot; or &quot;Their&quot; files when doing a merge</a></li>
+<li><a class="reference external" href="https://www.mercurial-scm.org/wiki/MergeToolConfiguration">Merge Tool Configuration</a></li>
+<li><a class="reference external" href="https://www.mercurial-scm.org/wiki/TipsAndTricks#Keep_.22My.22_or_.22Their.22_files_when_doing_a_merge">Keep &quot;My&quot; or &quot;Their&quot; files when doing a merge</a></li>
 </ul>
 <hr class="docutils" />
 <p>Copyright © GraphicsMagick Group 2012 - 2016</p>
