@@ -69,7 +69,7 @@ at <a class="reference external" href="http://sourceforge.net/projects/graphicsm
 possible.</p>
 <p>GraphicsMagick is a continual work in progress. The very latest code
 is available via the Mercurial distributed source control management
-tool (<a class="reference external" href="http://mercurial.selenic.com/">http://mercurial.selenic.com/</a>). GraphicsMagick may be retrieved
+tool (<a class="reference external" href="https://www.mercurial-scm.org/">https://www.mercurial-scm.org/</a>). GraphicsMagick may be retrieved
 via the following command:</p>
 <blockquote>
 hg clone <a class="reference external" href="http://hg.code.sf.net/p/graphicsmagick/code/">http://hg.code.sf.net/p/graphicsmagick/code/</a> GM</blockquote>
