@@ -110,7 +110,7 @@ proprietary applications.</li>
 <li>GM is distributed under an X11-style license (<a class="reference external" href="http://opensource.org/licenses/MIT">MIT License</a>),
 approved by the <a class="reference external" href="http://www.opensource.org/">Open Source Initiative</a>, recommended for use by
 the <a class="reference external" href="http://www.osscc.net/en/index.html">OSSCC</a>, and compatible with the <a class="reference external" href="http://www.fsf.org/licenses/licenses.html">GNU GPL</a>.</li>
-<li>GM source code is managed in <a class="reference external" href="http://mercurial.selenic.com/">Mercurial</a>, a distributed source
+<li>GM source code is managed in <a class="reference external" href="https://www.mercurial-scm.org/">Mercurial</a>, a distributed source
 control management tool which supports management of local
 changes.</li>
 <li>GM has 0.00 (zero) defects per 1000 lines of code (293,341 total
