@@ -44,8 +44,8 @@
 environments via programming APIs as shown in the following table:</p>
 <table border="1" class="docutils">
 <colgroup>
-<col width="18%" />
-<col width="82%" />
+<col width="23%" />
+<col width="77%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">Language</th>
@@ -78,8 +78,15 @@ Javascript programming with node.js.</td>
 <tr><td><a class="reference external" href="https://github.com/hhatto/pgmagick">Python</a></td>
 <td>PgMagick provides the power and ease of the C++ API, but in Python.</td>
 </tr>
-<tr><td><a class="reference external" href="http://rmagick.rubyforge.org/">Ruby</a></td>
-<td>RMagick provides a Ruby language extension</td>
+<tr><td><a class="reference external" href="https://github.com/RedisLabsModules/graphicsmagick">Redis Module</a></td>
+<td>Image processing via redis APIs</td>
+</tr>
+<tr><td><a class="reference external" href="http://rmagick.rubyforge.org/">Ruby (RMagick)</a></td>
+<td>RMagick provides a native Ruby language extension</td>
+</tr>
+<tr><td><a class="reference external" href="https://github.com/minimagick/minimagick">Ruby (MiniMagick)</a></td>
+<td>MiniMagick provides a Ruby language extension via a command line
+wrapper.</td>
 </tr>
 <tr><td><a class="reference external" href="http://www.graphicsmagick.org/TclMagick/doc/">Tcl/Tk</a></td>
 <td>TclMagick provides a scripting environment based on Tcl or Tcl/Tk.</td>
