@@ -61,6 +61,7 @@ ways:</p>
 <li>Hanno Böck</li>
 <li>Tobias Ospelt</li>
 <li>Michal Zalewski</li>
+<li>Moshe Kaplan</li>
 </ul>
 </blockquote>
 </div>
